--- a/src/app.postcss
+++ b/src/app.postcss
@@ -7,3 +7,10 @@ html,
 body {
 	@apply h-full overflow-hidden;
 }
+
+
+
+:root [data-theme='skeleton'] {
+	--theme-rounded-base: 5px;
+	--theme-rounded-container: 5px;
+}
