--- a/src/app.postcss
+++ b/src/app.postcss
@@ -14,3 +14,13 @@ body {
 	--theme-rounded-base: 5px;
 	--theme-rounded-container: 5px;
 }
+
+.widget-layer-map-z-1{
+	z-index:500;
+}
+.widget-layer-map-z-2{
+	z-index:501;
+}
+.widget-layer-map-z-3{
+	z-index:502;
+}
